scss/chat.scss
.full-page-chat.full-page-chat-sidebar-enabled {
  border-top-left-radius: var(--d-border-radius-large);
  border-top-right-radius: var(--d-border-radius-large);
  border: none;
}

.c-navbar-container {
  border-top-left-radius: var(--d-border-radius-large);
  border-top-right-radius: var(--d-border-radius-large);
  padding: 0 1.5em;
  background-color: var(--d-content-background);
}

body.has-full-page-chat {
  background-color: var(--background-color);
}

.chat-drawer .chat-drawer-container {
  box-shadow: 0px 0px 0px 2px var(--d-chat-border);
  border: none;
}

.chat-drawer .channels-list-container .chat-channel-row {
  margin-bottom: var(--spacing-block-xs);
  font-size: var(--font-up-1);
  border-radius: var(--d-border-radius);
  border-bottom: none;
  &:hover {
    background-color: var(--d-sidebar-active-background);
  }
}

.channel-title {
  font-weight: bold;
  text-transform: uppercase;
  font-size: var(--font-down-1);
}

